# templatrix

./: README.md  __main__.py  pyproject.toml
templatrix/: __init__.py  cli.py
templatrix/src/: fastapi_template.py
templatrix/src/templates/template_fastapi/databases/: users.db
templatrix/src/templates/template_flask/app/databases/: test_users.db  users.db
